--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,21 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="@string/label_nro_dados"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/nro_dados" />
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -26,6 +41,19 @@
         android:id="@+id/resultadoTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:gravity="center_horizontal" />
+
+    <ImageView
+        android:id="@+id/resultadoImageView"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:contentDescription="Imagem Resultado"
+        app:srcCompat="@android:color/transparent" />
+
+    <ImageView
+        android:id="@+id/resultado2ImageView"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        app:srcCompat="@android:color/transparent" />
 
 </LinearLayout>
